[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyDataStructAlgo"
version = "0.1.0"
authors = [
  { name="Clarissa Au", email="clarissayuenyee@gmail.com" },
]
description = "Datastructures and Algorithms written in Python. Mainly an exercise, inspired by JS-DSA. "
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL v3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/clarissa-au/PY-DSA"
"Bug Tracker" = "https://github.com/clarissa-au/PY-DSA"